# middleware/auth.js
@@ -4,16 +4,16 @@ const config = process.env;
 
 const verifyToken = (req, res, next) => {
   const token =
-    req.body.token || req.query.token || req.headers["x-access-token"];
+    req.body.token || req.query.token || req.headers["x-auth-token"];
 
   if (!token) {
-    return res.status(403).send("A token is required for authentication");
+    return res.status(403).json({message: "A token is required for authentication"});
   }
   try {
     const decoded = jwt.verify(token, config.JWT_SECRET);
     req.user = decoded;
   } catch (err) {
-    return res.status(401).send("Invalid Token");
+    return res.status(401).json({message: "Invalid Token"});
   }
   return next();
 };
