# swagger.yaml
@@ -30,6 +30,11 @@ paths:
         post:
             summary: Add a single Product
             tags: [Product]
+            parameters:
+                - name: x-auth-token
+                  in: header
+                  type: string
+                  required: true
             requestBody:
                 required: true
                 content:
@@ -44,6 +49,10 @@ paths:
             summary: Get a product by id
             tags: [Product]
             parameters:
+                - name: x-auth-token
+                  in: header
+                  type: string
+                  required: true
                 - name: productID
                   in: path
                   required: true
@@ -61,6 +70,10 @@ paths:
             summary: Update a Product by ID
             tags: [Product]
             parameters:
+                - name: x-auth-token
+                  in: header
+                  type: string
+                  required: true
                 - name: productID
                   in: path
                   required: true
@@ -84,6 +97,10 @@ paths:
             summary: Delete a product by id
             tags: [Product]
             parameters:
+                - name: x-auth-token
+                  in: header
+                  type: string
+                  required: true
                 - name: productID
                   in: path
                   required: true
@@ -111,6 +128,11 @@ paths:
         post:
             summary: Add a single Blog
             tags: [Blog]
+            parameters:
+                - name: x-auth-token
+                  in: header
+                  type: string
+                  required: true
             requestBody:
                 required: true
                 content:
@@ -125,6 +147,10 @@ paths:
             summary: Get a blog by id
             tags: [Blog]
             parameters:
+                - name: x-auth-token
+                  in: header
+                  type: string
+                  required: true
                 - name: blogID
                   in: path
                   required: true
@@ -142,6 +168,10 @@ paths:
             summary: Update a Blog by ID
             tags: [Blog]
             parameters:
+                - name: x-auth-token
+                  in: header
+                  type: string
+                  required: true
                 - name: blogID
                   in: path
                   required: true
@@ -165,6 +195,10 @@ paths:
             summary: Delete a blog by id
             tags: [Blog]
             parameters:
+                - name: x-auth-token
+                  in: header
+                  type: string
+                  required: true
                 - name: blogID
                   in: path
                   required: true
@@ -183,6 +217,11 @@ paths:
         get:
             summary: Get all the Users
             tags: [User]
+            parameters:
+                - name: x-auth-token
+                  in: header
+                  type: string
+                  required: true
             responses:
                 "200":
                     description: The list of all the Users
@@ -196,6 +235,10 @@ paths:
             summary: Get a user by id
             tags: [User]
             parameters:
+                - name: x-auth-token
+                  in: header
+                  type: string
+                  required: true
                 - name: userID
                   in: path
                   required: true
@@ -213,6 +256,10 @@ paths:
             summary: Update a User by ID
             tags: [User]
             parameters:
+                - name: x-auth-token
+                  in: header
+                  type: string
+                  required: true
                 - name: userID
                   in: path
                   required: true
@@ -236,6 +283,10 @@ paths:
             summary: Delete a user by id
             tags: [User]
             parameters:
+                - name: x-auth-token
+                  in: header
+                  type: string
+                  required: true
                 - name: userID
                   in: path
                   required: true
@@ -277,67 +328,6 @@ paths:
             responses:
                 "200":
                     description: User was created successfully
-    /users/recentProducts/{userId} :
-        get:
-            summary: Get the User's recently viewed products list
-            tags: [User]
-            consumes:
-                - application/json
-            parameters:
-            - name: userId
-              in: path
-              required: true
-              description: Autogenerated User ID by Mongoose
-              schema:
-                type: string
-            responses:
-                "200":
-                    description: Recently viewed products by user
-    /users/recentProducts/{userId}/{productId} :
-        post:
-            summary: Add a product to the User's recent products list
-            tags: [User]
-            consumes:
-                - application/json
-            parameters:
-            - name: userId
-              in: path
-              required: true
-              description: Autogenerated User ID by Mongoose
-              schema:
-                type: string
-            - name: productId
-              in: path
-              required: true
-              description: Autogenerated Product ID by Mongoose
-              schema:
-                type: string
-            responses:
-                "200":
-                    description: Product Successfully Added to Recently Viewed Products
-
-        delete:
-            summary: Remove a product from the User's recent products list
-            tags: [User]
-            consumes:
-                - application/json
-            parameters:
-            - name: userId
-              in: path
-              required: true
-              description: Autogenerated User ID by Mongoose
-              schema:
-                type: string
-            - name: productId
-              in: path
-              required: true
-              description: Autogenerated Product ID by Mongoose
-              schema:
-                type: string
-            responses:
-                "200":
-                    description: Recently viewed product deleted succesfully
-
     /users/favouriteBlogs/{userId} :
         get:
             summary: Get User's favourite blogs list
@@ -345,6 +335,10 @@ paths:
             consumes:
                 - application/json
             parameters:
+            - name: x-auth-token
+              in: header
+              type: string
+              required: true
             - name: userId
               in: path
               required: true
@@ -362,6 +356,10 @@ paths:
             consumes:
                 - application/json
             parameters:
+            - name: x-auth-token
+              in: header
+              type: string
+              required: true
             - name: userId
               in: path
               required: true
@@ -383,6 +381,10 @@ paths:
             consumes:
                 - application/json
             parameters:
+            - name: x-auth-token
+              in: header
+              type: string
+              required: true
             - name: userId
               in: path
               required: true
@@ -406,6 +408,10 @@ paths:
             consumes:
                 - application/json
             parameters:
+            - name: x-auth-token
+              in: header
+              type: string
+              required: true
             - name: userId
               in: path
               required: true
@@ -423,6 +429,10 @@ paths:
             consumes:
                 - application/json
             parameters:
+            - name: x-auth-token
+              in: header
+              type: string
+              required: true
             - name: userId
               in: path
               required: true
@@ -451,6 +461,10 @@ paths:
             consumes:
                 - application/json
             parameters:
+            - name: x-auth-token
+              in: header
+              type: string
+              required: true
             - name: userId
               in: path
               required: true
